--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   <main id="main">My ID is "main"!</main>
   <br />
   <div>
-      <input id="button" type="button" value="Click Me!"/>
+      <input id="button" type="button" onclick="addingEventListener()"  value="Click here!"/>
+      <p id="button">Content in!</p>
   </div>
   <br />
   <div>
